--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ button:focus,
     height              : 100%;
     background-image    : url(../img/Mike%20Final.jpg);
     background-size     : cover;
-    background-position : center top;
+    background-position : 0% 20%;
     }
 
 .header .profile-img:before {
