--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ button:focus,
     z-index             : -1;
     width               : 100%;
     height              : 100%;
-    background-image    : url(../img/Mike%20Final.jpg);
+    background-image    : url(../img/Mike%20Final%20-%20Copy.jpg);
     background-size     : cover;
     background-position : 0% 20%;
     }
